# MazeGame

./: .gitignore  CMakeLists.txt  README.md
include/: Maze.hpp  Player.hpp  Timer.hpp
src/: Maze-alternative.cpp  Maze.cpp  Player.cpp  Timer.cpp  main.cpp
